test/error/StForeachClass.fu
public class Test
{
	public static bool Run()
	{
		Test() o;
		foreach (int i in o) { //ERROR: 'foreach' invalid on 'Test'
		}
		return true;
	}
}
